✨ add `request_query` as a possible filterable field
